--- a/templates/ajax.html
+++ b/templates/ajax.html
@@ -34,6 +34,7 @@
 
            xmlHttpRequest.onreadystatechange=function()
            {
+               alert('helloworld')
                if(xmlHttpRequest.readyState==4)
                {
                    if(xmlHttpRequest.status==200)
